--- a/WpfApplab2/WpfApplab2/WpfApplab2.csproj
+++ b/WpfApplab2/WpfApplab2/WpfApplab2.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="win1.cs" />
+    <Compile Include="win2.cs" />
+    <Compile Include="win3.cs" />
+    <Compile Include="win4.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
