--- a/coursework/coursework/coursework.csproj
+++ b/coursework/coursework/coursework.csproj
@@ -56,6 +56,34 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AdditionalPoints.xaml.cs">
+      <DependentUpon>AdditionalPoints.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Calculus.xaml.cs">
+      <DependentUpon>Calculus.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="InsertInto.xaml.cs">
+      <DependentUpon>InsertInto.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Vladdick.cs" />
+    <Compile Include="Page6.xaml.cs">
+      <DependentUpon>Page6.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ScheduleWin.xaml.cs">
+      <DependentUpon>ScheduleWin.xaml</DependentUpon>
+    </Compile>
+    <Page Include="AdditionalPoints.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Calculus.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="InsertInto.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -72,19 +100,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Page2.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Page3.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Page4.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Page5.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Page6.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ScheduleWin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -92,15 +116,6 @@
   <ItemGroup>
     <Compile Include="Page1.xaml.cs">
       <DependentUpon>Page1.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Page2.xaml.cs">
-      <DependentUpon>Page2.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Page3.xaml.cs">
-      <DependentUpon>Page3.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Page4.xaml.cs">
-      <DependentUpon>Page4.xaml</DependentUpon>
     </Compile>
     <Compile Include="Page5.xaml.cs">
       <DependentUpon>Page5.xaml</DependentUpon>
@@ -135,6 +150,18 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="1616522875_16-p-ochen-krasivii-fon-18.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="01.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1626779652_17-kartinkin-com-p-fon-tsvetnoi-gradient-krasivo-19.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="index.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="pngtree-delicate-cute-watercolor-background-image_407971.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
